src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>APS_openSMS__SMS_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationDate__c</fullName>
        <label>ApplicationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ApplicationFormDate__c</fullName>
        <label>ApplicationFormDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BuildingName__c</fullName>
        <label>BuildingName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONSIDERATIONVALUE__c</fullName>
        <label>CONSIDERATIONVALUE</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COUNTPARKING__c</fullName>
        <label>COUNTPARKING</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carpet_Area__c</fullName>
        <label>Carpet Area</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerID__c</fullName>
        <label>CustomerID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flatno__c</fullName>
        <label>Flatno</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Broker__c</fullName>
        <label>Name of the Broker</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeOfResi__c</fullName>
        <label>TypeOfResidence</label>
        <picklist>
            <picklistValues>
                <fullName>Bunglow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wing__c</fullName>
        <label>Wing</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>APS_openSMS__Open_SMS</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>APS_openSMS__SMS_Opt_Out__c</columns>
        <filterScope>Everything</filterScope>
        <label>Open SMS</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>APS_openSMS__Validation_rule_for_mobile_number</fullName>
        <active>false</active>
        <description>This validation rule is for validate mobile number when user enters below 10 digit number.</description>
        <errorConditionFormula>IF(ISBLANK(MobilePhone),NULL,(LEN( MobilePhone ) &lt; 10 || LEN( MobilePhone ) &gt; 15))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Please Enter Valid Mobile Number.
Should be Min 10 digits and below 15 digits</errorMessage>
    </validationRules>
</CustomObject>